@@ -188,7 +188,7 @@ static void ambiguous_error (struct cobc_location *loc, struct cobc_word *w);
 %token CONTAINS CHARACTERS COMPUTE GO STOP RUN ACCEPT PERFORM RENAMES
 %token IF ELSE SENTENCE LINE LINES PAGE OPEN CLOSE REWRITE SECTION SYMBOLIC
 %token ADVANCING INTO AT END NEGATIVE POSITIVE SPACE NOT
-%token CALL USING INVALID CONTENT QUOTE LOW_VALUE HIGH_VALUE
+%token CALL USING INVALID CONTENT LENGTH QUOTE LOW_VALUE HIGH_VALUE
 %token SELECT ASSIGN DISPLAY UPON SET UP DOWN SEARCH
 %token ORGANIZATION ACCESS MODE KEY STATUS ALTERNATE SORT SORT_MERGE
 %token SEQUENTIAL INDEXED DYNAMIC RANDOM RELATIVE WHEN TEST PROCEED
@@ -1743,6 +1743,7 @@ call_param:
 call_mode:
   REFERENCE			{ call_mode = COBC_CALL_BY_REFERENCE; }
 | CONTENT			{ call_mode = COBC_CALL_BY_CONTENT; }
+| CONTENT LENGTH _of		{ call_mode = COBC_CALL_BY_LENGTH; }
 | VALUE				{ call_mode = COBC_CALL_BY_VALUE; }
 ;
 call_returning:
@@ -3980,6 +3981,7 @@ _key: | KEY ;
 _mode: | MODE ;
 _number: | NUMBER ;
 _on: | ON ;
+_of: | OF ;
 _order: | ORDER ;
 _program: | PROGRAM ;
 _record: | RECORD ;
